# Cpp_Raft_impl

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md  conanfile.txt  mk_debug  sockets  start_raft.sh
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  raft_impl.cpp
include/raft/: lib.hpp  rng.hpp
include/raft/testing/: definitions.hpp
src/: CMakeLists.txt  lib.cpp  rng.cpp
tests/: CMakeLists.txt  raft_complete_init.cpp  raft_complete_init_1716942716.cpp  raft_follower_init.cpp  raft_init.cpp  raft_leader_init.cpp
